Rename, refactor files, routes and fields to change 'dps' to 'urgent'

--- a/app/views/apply/application-summary.html
+++ b/app/views/apply/application-summary.html
@@ -13,8 +13,8 @@
 
         <h1>{{ hmpoTitle }}</h1>
 
-        {# DPS #}
-        {% if values.dps == true %}
+        {# urgent #}
+        {% if values.urgent == true %}
             <p>Based on your answers, you’re applying for an adult renewal.</p>
             <p>If you’re applying for someone who is unable to make their own decisions, you need to<a href=“https://www.gov.uk/get-a-passport-urgently”> apply with Paper Premium</a>.</p>
 
