--- a/app/views/apply/confirm.html
+++ b/app/views/apply/confirm.html
@@ -173,7 +173,7 @@
         }
     ] }) }}
 
-    {% if values.dps == true %}
+    {% if values.urgent == true %}
         <h2>Appointment</h2>
             {{ govukSummaryList({ rows: [
             {
