--- a/app/views/apply/next-steps.html
+++ b/app/views/apply/next-steps.html
@@ -48,7 +48,7 @@
         href: "/help/feedback"
     }) }}
 
-    {% elif values.dps %}
+    {% elif values.urgent %}
 
         {{ govukWarningText({
             text: "You can't use your old passport on the day of your appointment",
