--- a/app/views/filter/damaged.html
+++ b/app/views/filter/damaged.html
@@ -22,7 +22,7 @@
                             text: "How was the passport damaged?"
                         }
                     })
-                } if not values.urgent and not values.dps
+                } if not values.urgent
             }, {
                 value: false
             }]
