--- a/app/views/urgent/urgent-choose-date-and-place.html
+++ b/app/views/urgent/urgent-choose-date-and-place.html
@@ -54,7 +54,7 @@
             <tr class="govuk-table__row">
 
                 <td class="govuk-table__cell">
-                    <a href="/dps/dps-choose-time">
+                    <a href="/urgent/urgent-choose-time">
                         London
                         <br>
                         <span class="available">Available</span>
