--- a/app/views/apply/passport-details.html
+++ b/app/views/apply/passport-details.html
@@ -7,7 +7,7 @@
 
     {% call hmpoForm(ctx) %}
 
-        {% if values.dps %}
+        {% if values.urgent %}
             <p>This passport will be cancelled on the day of your collection appointment. You won’t be able to use it.</p>
         {% endif %}
 
@@ -29,13 +29,13 @@
             hint: "For example, 01 08 2017"
         }) }}
 
-        {% if not values.dps %}
+        {% if not values.urgent %}
             {% call hmpoWarningText({ iconFallbackText: "Warning" }) %}
                 You’ll need to send us your old passport so we can cancel it.
             {% endcall %}
         {% endif %}
 
-        {% if values.dps %}
+        {% if values.urgent %}
             {% call hmpoDetails({ summaryText: "My passport is lost or stolen" }) %}
                 You must <a href="#">cancel your old passport</a>. You can’t apply with Online Premium, but you can still get your passport urgently with Fast Track.
             {% endcall %}
