--- a/app/views/filter/previous-passport.html
+++ b/app/views/filter/previous-passport.html
@@ -27,7 +27,7 @@
                 value: true
             }, {
                 value: false,
-                conditional: { html: passportInterview } if not values.urgent and not values.dps
+                conditional: { html: passportInterview } if not values.urgent and not values.urgent
             }]
         }) }}
 
