--- a/app/views/start.html
+++ b/app/views/start.html
@@ -100,7 +100,7 @@
                             <p>All other application types (for example, renewing a passport or getting a child passport) should take 3
                                 weeks. It can take longer if more information is needed or your application hasn’t been filled out
                                 correctly.</p>
-                            <p>You should use a different service if you <a href="https://www.gov.uk/get-a-passport-urgently">need your
+                            <p>You should use a different service if you <a href="/urgent/urgent-start">need your
                                 passport urgently</a>.</p>
 
                             {% call hmpoInsetText() %}
