--- a/app/views/apply/cost.html
+++ b/app/views/apply/cost.html
@@ -46,7 +46,7 @@
     {% if values.urgent === true%}
         {{ govukSummaryList({ rows: [
             {
-                key: { text: "Passport size" },
+                key: { text: "New passport" },
                 value: { html:
                     (
                         "Frequent traveller passport"
