--- a/app/views/index.html
+++ b/app/views/index.html
@@ -125,9 +125,7 @@
     <li><a href="/urgent/urgent-start">Online Premium service (DPS)</a></li>
     </ul>
 
-    {# <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-
-
+<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
     <h2>Countersignatures</h2>
     <p>User journeys for countersignatures.</p>
 
@@ -166,8 +164,6 @@
             </ul>
         <li><a href="/csig/csig-identity-failed">Experian check failed</a></li>
         <li><a href="/csig/csig-identity-failed-three-times">Experian check failed 3 times</a></li>
-        <!-- <li><a href="#">Experian check failed</a></li> -->
-        <!-- <li><a href="#">Experian check failed 3 times</a></li>-->
         <!-- <li><a href="#">Renominate anytime</a></li> -->
         <!-- <li><a href="#">What you need to do (new tracking page)</a></li> -->
     </ul>
