--- a/app/views/urgent/urgent-name-changed.html
+++ b/app/views/urgent/urgent-name-changed.html
@@ -1,6 +1,6 @@
 {% extends "layout-apply.html" %}
 
-{% set hmpoTitle %}Have you changed your name?{% endset %}
+{% set hmpoTitle %}Have you changed your name since your last passport?{% endset %}
 
 {% block mainContent %}
 
