--- a/app/views/filter/intro.html
+++ b/app/views/filter/intro.html
@@ -86,12 +86,12 @@
                 </ol>
 
                 {% call hmpoDetails({ summaryText: "I need help doing things online" }) %}
-                    <p>You can call the Passport Adviceline for help.</p>
+                    <p>You can call the Passport Adviceline and ask for help</p>
                     <p>
-                        Telephone: 0300 330 0901<br/>
-                        Textphone: 0300 330 0808<br/>
-                        Monday to Friday, 8:00am to 8:00pm<br/>
-                        Weekends and public holidays, 9:00am to 5:30pm
+                        Telephone: +44 (0) 300 330 0901<br/>
+                        Textphone: +44 (0) 300 330 0808<br/>
+                        Monday to Friday, 8:00am to 8:00pm (UK time) <br/>
+                        Weekends and public holidays, 9:00am to 5:30pm (UK time)
                     </p>
                     <p><a href="https://www.gov.uk/call-charges">Find out about call charges</a></p>
                 {% endcall %}
