--- a/app/views/start.html
+++ b/app/views/start.html
@@ -59,8 +59,8 @@
                 {% endcall %}
 
                 <h2>How long it takes</h2>
-                <p>It takes up to 3 weeks to renew or replace a passport online. It may take longer for a first adult passport.</p>
-                <p>You may be able to <a href="/urgent/urgent-start">get a passport urgently</a> to travel for compassionate reasons or work, or to prove your identity.</p>
+                <p>Allow up to 10 weeks to get your passport.</p>
+                <p>You can <a href="https://www.gov.uk/get-a-passport-urgently">get a passport urgently</a> if you need one sooner.</p>
                 <p>Do not book travel until you have a valid passport - your new passport will not have the same number as your old one.</p>
 
                 <h2>Before you start</h2>
@@ -90,10 +90,8 @@
                                     href="https://www.gov.uk/how-the-post-office-check-and-send-service-works">Post Office
                                     Check and Send service</a>.
                             </p>
-
-                            {% call hmpoInsetText() %}
-                                <p>Because of coronavirus (COVID-19), it’s taking longer to process paper applications than online applications. Use the online service to get your passport.</p>
-                            {% endcall %}
+                                <p>It takes longer to apply by post than online.</p>
+                
                             <br/>
                             <br/>
                         </div>
