--- a/app/views/apply/application-summary.html
+++ b/app/views/apply/application-summary.html
@@ -144,7 +144,7 @@
         <h2>To complete your application you’ll need to:</h2>
         <ul class="govuk-list govuk-list--bullet">
             <li>fill in your application details</li>
-            <li>pay online for your passport</li>
+            <li>pay for your passport</li>
 
             {# FTC #}
             {% if values.applicationType == "first" and values.adultOrChild == "child" %}
