--- a/app/views/filter/intro.html
+++ b/app/views/filter/intro.html
@@ -67,7 +67,7 @@
                         <p>We’ll tell you what documents you need to send.</p>
                     </li>
                     <li>
-                        <h2>Pay for your passport online</h2>
+                        <h2>Pay for your passport</h2>
                         <p>A standard passport is £75.50 for an adult, and £49 for a child.</p>
                     </li>
                     <li>
