--- a/app/views/urgent/urgent-gov-uk.html
+++ b/app/views/urgent/urgent-gov-uk.html
@@ -57,7 +57,7 @@
 
                 <h2 class="govuk-heading-l">How to apply</h2>
                 <p>You can pay for a faster service if you need a passport within 3 weeks.</p>
-                <p>You’ll need to book an appointment at a <a href="https://www.gov.uk/find-regional-passport-office">passport office</a>. Appointments are available up to 3 weeks in advance.</p>
+                <p>You’ll need to book an appointment at a <a href="https://www.passport.service.gov.uk/help/passport-offices/">passport office</a>. Appointments are available up to 3 weeks in advance.</p>
                 <p>You can’t use these services if:</p>
                 <ul class="govuk-list govuk-list--bullet">
                     <li>you’re applying for a <a href="/start">first adult passport</a></li>
