--- a/app/views/urgent/urgent-start.html
+++ b/app/views/urgent/urgent-start.html
@@ -56,7 +56,7 @@
             <div class="govuk-grid-column-two-thirds-from-desktop">
 
                 <h2 class="govuk-heading-l">Online Premium</h2>
-                <p>You’ll need to book an appointment at a <a href="https://www.gov.uk/find-regional-passport-office">passport office</a>.</p>
+                <p>You’ll need to book an appointment at a <a href="https://www.passport.service.gov.uk/help/passport-offices/">passport office</a>.</p>
                 <p>Take your old passport and any documents to your appointment to be checked. You’ll need to return 2 hours later to collect your new passport.</p>
 
                 <h3 class="govuk-heading-m">What it costs</h3>
